<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/offset_small">

    <LinearLayout
        android:id="@+id/main_adapter_modal_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/offset_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:contentDescription="@string/content_description_icon"
            android:src="@drawable/ic_baseline_edit_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/edit_action_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_adapter_modal_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/offset_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_adapter_modal_edit">

        <ImageView
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:contentDescription="@string/content_description_icon"
            android:src="@drawable/ic_baseline_delete_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/delete_action_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>