<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/topic_parent_navigation"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="@dimen/item_size"
        android:layout_height="@dimen/item_size"
        android:layout_marginStart="@dimen/offset_medium"
        android:layout_marginTop="@dimen/offset"
        android:contentDescription="@string/content_description_navigation"
        app:icon="@drawable/ic_ui_arrow_back"
        app:iconSize="@dimen/icon_size"
        app:iconTint="?attr/colorControlNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/topic_parent_add"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="@dimen/item_size"
        android:layout_height="@dimen/item_size"
        android:layout_marginTop="@dimen/offset"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/content_description_add"
        android:visibility="gone"
        app:icon="@drawable/ic_ui_add"
        app:iconSize="@dimen/icon_size"
        app:iconTint="?attr/colorControlNormal"
        app:layout_constraintEnd_toStartOf="@+id/topic_parent_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/topic_parent_edit"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="@dimen/item_size"
        android:layout_height="@dimen/item_size"
        android:layout_marginTop="@dimen/offset"
        android:layout_marginEnd="@dimen/offset_medium"
        android:contentDescription="@string/content_description_edit"
        app:icon="@drawable/ic_ui_edit"
        app:iconSize="@dimen/icon_size"
        app:iconTint="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topic_parent_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginTop="@dimen/offset"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_parent_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>